Fixed translations in dialog boxes.
git-svn-id: http://sopcast-player.googlecode.com/svn/trunk@257 70e63da4-d337-11dd-8772-d1b041bf0e37

--- a/ui/About.glade
+++ b/ui/About.glade
@@ -85,7 +85,8 @@ Francesco Marzaro
 nanker
 Мирослав Николић &lt;miroslavnikolic@rocketmail.com&gt;
 CrabMan
-أبو همام &lt;xx1429xx@hotmail.com&gt;</property>
+أبو همام &lt;xx1429xx@hotmail.com&gt;
+Josu Orbe</property>
     <property name="wrap_license">True</property>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox1">
