--- a/ui/About.glade
+++ b/ui/About.glade
@@ -10,7 +10,7 @@
     <property name="icon">sopcast-player.svg</property>
     <property name="type_hint">dialog</property>
     <property name="program_name">SopCast Player</property>
-    <property name="version">0.6.0</property>
+    <property name="version">0.6.1</property>
     <property name="copyright" translatable="yes">Copyright © 2009-2011 Jason Scheunemann</property>
     <property name="comments" translatable="yes">A GUI front-end for SopCast</property>
     <property name="website">http://code.google.com/p/sopcast-player</property>
@@ -86,7 +86,8 @@ nanker
 Мирослав Николић &lt;miroslavnikolic@rocketmail.com&gt;
 CrabMan
 أبو همام &lt;xx1429xx@hotmail.com&gt;
-Josu Orbe</property>
+Josu Orbe
+Tómas Guðmundsson &lt;wildrabbit@gmail.com&gt;</property>
     <property name="wrap_license">True</property>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox1">
